--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <div class="container">
+      <ol class="menu list">
+        <li class="menu__item">
+          <a href="./1-gallery.html" class="menu__link link">Gallery</a>
+        </li>
+        <li class="menu__item">
+          <a href="./2-form.html" class="menu__link link">Form</a>
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
